--- a/second-task/Dockerfile
+++ b/second-task/Dockerfile
@@ -7,7 +7,7 @@ WORKDIR /app
 # копирование JAR-файла (созданого gradle/build/bootJar) приложения в контейнер и переименование его
 COPY build/libs/skillbox-second-task-0.0.1-SNAPSHOT.jar app.jar
 
-# по умолчанию будет запуск со свойством в properties - true
+# определение переменной среды, по умолчанию будет запуск со свойством из properties - true
 ENV CREATE_ON_STARTUP=true
 
 # команда для запуска приложения
